# agentic-projects-public

./: LICENSE  README.md  docker-compose.yml
01_basic_agent/: IMPLEMENTATION.md  docker-compose.yml
01_basic_agent/api/: agent.py  main.py  pyproject.toml  requirements.txt
01_basic_agent/ui/: app.py
02_intermediate_agent/: IMPLEMENTATION.md  docker-compose.yml
02_intermediate_agent/api/: agent.py  main.py  requirements.txt
02_intermediate_agent/ui/: app.py
03_advanced_agent/: .env.example  IMPLEMENTATION.md  docker-compose.yml
03_advanced_agent/api/: agent.py  main.py  requirements.txt  tools.py
03_advanced_agent/data/: sample_patient.txt
03_advanced_agent/ui/: Dockerfile  app.py
landing/: Dockerfile  app.py
